test/testdata/invalid/syntax_error.cue
package config

// Invalid: CUE syntax error
this is not valid CUE {{{
